--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #search-area{
     margin: auto;
-    width: 35%;
+    width: 25%;
     padding: 3%;
 }
 #input-area{
@@ -9,4 +9,17 @@
 #search-button{
     background-color: green;
     border-radius: 5px;
+}
+#mealNames{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 20px
+}
+.mealContainer{
+    border: 1px solid goldenrod;
+    border-radius: 20px;
+    padding: 40px;
+    text-align: center;
+    width: 200px;
+    height: 100px;
 }
