--- a/style.css
+++ b/style.css
@@ -15,11 +15,15 @@
     grid-template-columns: repeat(3,1fr);
     grid-gap: 20px
 }
-.mealContainer{
+.food{
     border: 1px solid goldenrod;
     border-radius: 20px;
     padding: 40px;
     text-align: center;
     width: 200px;
     height: 100px;
+    font-size: 18px;
+}
+#mealdetails img{
+    width: 50%;
 }
